--- a/feed.html
+++ b/feed.html
@@ -32,9 +32,10 @@
     ></script>
     <title>Feed</title>
   </head>
-  <body>
+  
+  <body class="m-0">
     <nav class="navbar navbar-expand-lg bg-light">
-      <div class="d-flex container">
+      <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="#">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -178,7 +179,7 @@
             </div>
           </div>
         </div>
-        <!---->
+        
       </div>
     </nav>
     <!-- Menu-->
