--- a/secondpage.html
+++ b/secondpage.html
@@ -35,9 +35,9 @@
     <title>Instagram</title>
   </head>
 
-  <body>
+  <body >
     <nav class="navbar navbar-expand-lg bg-light">
-      <div class="d-flex container">
+      <div class="container-fluid ">
         <a class="navbar-brand d-flex align-items-center" href="#">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -181,7 +181,7 @@
             </div>
           </div>
         </div>
-        <!---->
+        
       </div>
     </nav>
     <!-- Menu-->
@@ -220,97 +220,77 @@
       </div>
     </div>
     <!--Instagram Rows -->
-    <div class="container">
-      <div class="row gap-3">
-        <div class="col-4">
+    <div class="container-fluid px-5">
+      <div class="row gap-2 flex-nowrap" style="height: 300px">
+        <div class="col-4 h-100">
           <img
             src="https://images.unsplash.com/photo-1682167176169-c74f2a6c6b84?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1916&q=80"
-            class="ig"
-            style="width: 300px"
+            class="h-100 w-100 object-fit-cover"
           />
         </div>
 
-        <div class="col-4">
+        <div class="col-4 h-100">
           <img
             src="https://images.unsplash.com/photo-1495431299232-7a1177bc4178?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NjY0fHxibGFjayUyMGJhY2tncm91bmR8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=800&q=60"
-            class="ig"
-            style="width: 300px"
+            class="h-100 w-100 object-fit-cover"
           />
         </div>
-        <div class="col-4">
+        <div class="col-4 h-100">
           <img
             src="https://images.unsplash.com/photo-1695758891556-f70f65a704b7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMnx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=60"
-            class="ig"
-            style="width: 300px"
+            class="h-100 w-100 object-fit-cover"
           />
         </div>
       </div>
-
-      <div class="row">
-        <div class="col-4">
+</div>
+<!-- 2nd row-->
+<div class="container-fluid px-5 pt-4">
+      <div class="row gap-2 flex-nowrap" style="height: 300px">
+        <div class="col-4 h-100">
           <img
-            src="https://images.unsplash.com/photo-1625215614361-042c9c168448?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTQyfHxibGFjayUyMGJhY2tncm91bmR8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=800&q=60"
-            class="ig"
-            style="width: 300px"
+            src="https://images.unsplash.com/photo-1695605302492-1cf7a0f789c0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyNHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=60"
+            class="h-100 w-100 object-fit-cover"
           />
         </div>
 
-        <div class="col-4">
-          <div class="thumbnail">
-            <!--<div class="img-container">-->
-            <img
-              src="https://images.unsplash.com/photo-1695575161610-7aeb03933996?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1772&q=80"
-              class="ig"
-            />
-            <!-- </div>-->
-          </div>
+        <div class="col-4 h-100">
+          <img
+            src="https://images.unsplash.com/photo-1693711836001-99859bb7185a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzNXx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=60"
+            class="h-100 w-100 object-fit-cover"
+          />
         </div>
-
-        <div class="col-4">
-          <div class="thumbnail">
-            <div class="img-container">
-              <img
-                src="https://images.unsplash.com/photo-1575231792399-e17574e01113?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTgwfHxibGFjayUyMGJhY2tncm91bmR8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=800&q=60"
-                class="ig"
-              />
-            </div>
-          </div>
+        <div class="col-4 h-100">
+          <img
+            src="https://images.unsplash.com/photo-1696537278602-479f43f18851?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw2Mnx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=60"
+            class="h-100 w-100 object-fit-cover"
+          />
         </div>
       </div>
-      <div class="row">
-        <div class="col-4">
-          <div class="thumbnail">
-            <div class="img-container">
-              <img
-                src="https://images.unsplash.com/photo-1588415232922-98443619860a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NjMzfHxibGFjayUyMGJhY2tncm91bmR8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=800&q=60"
-                class="ig"
-              />
-            </div>
-          </div>
+</div>
+
+<!-- 3rd row-->
+<div class="container-fluid px-5 pt-4 pb-4">
+      <div class="row gap-2 flex-nowrap" style="height: 300px">
+        <div class="col-4 h-100">
+          <img
+            src="https://images.unsplash.com/photo-1682686581551-867e0b208bd1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2670&q=80"
+            class="h-100 w-100 object-fit-cover"
+          />
         </div>
 
-        <div class="col-4">
-          <div class="thumbnail">
-            <div class="img-container">
-              <img
-                src="https://images.unsplash.com/photo-1500145588304-deb802b4af76?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTkyfHxibGFjayUyMGJhY2tncm91bmR8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=800&q=60"
-                class="ig"
-              />
-            </div>
-          </div>
+ <div class="col-4 h-100">
+          <img
+            src="https://images.unsplash.com/photo-1682687220923-c58b9a4592ae?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2670&q=80"
+            class="h-100 w-100 object-fit-cover"
+          />
         </div>
-
-        <div class="col-4">
-          <div class="thumbnail">
-            <div class="img-container">
-              <img
-                src="https://images.unsplash.com/photo-1492254776308-d1fc1f3fd6f3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NjI3fHxibGFjayUyMGJhY2tncm91bmR8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=800&q=60"
-                class="ig"
-              />
-            </div>
-          </div>
+ <div class="col-4 h-100">
+          <img
+            src="https://plus.unsplash.com/premium_photo-1694884742403-9ea13e6cfd64?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2646&q=80"
+            class="h-100 w-100 object-fit-cover"
+          />
         </div>
-      </div>
-    </div>
+      
+  
   </body>
 </html>
