--- a/secondpage.html
+++ b/secondpage.html
@@ -66,12 +66,13 @@
           <!-- Settings -->
           <div class="nav-item dropdown">
             <a
-              class="nav-link dropdown-toggle text-secondary"
+              class="nav-link dropdown-toggle text-secondary "
               href="#"
               id="navbarDropdownMenuLink"
               data-toggle="dropdown"
               aria-haspopup="true"
               aria-expanded="false"
+              
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -89,7 +90,7 @@
                 />
               </svg>
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" display="text-align-center">
               <a class="dropdown-item" href="#">Profile</a>
               <a class="dropdown-item" href="#">Accesibility</a>
               <a class="dropdown-item" href="#">Privacy and Data</a>
