--- a/secondpage.html
+++ b/secondpage.html
@@ -90,7 +90,7 @@
                 />
               </svg>
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" display="text-align-center">
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="#">Profile</a>
               <a class="dropdown-item" href="#">Accesibility</a>
               <a class="dropdown-item" href="#">Privacy and Data</a>
